# AlgoTrace

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: Algorithm.hpp  AlgorithmRegistry.hpp  BubbleSort.hpp  GnomeSort.hpp  HeapSort.hpp  PancakeSort.hpp  QuickSort.hpp  StalinSort.hpp  Visualizer.hpp
lib/: AlgorithmRegistry.cpp  BubbleSort.cpp  GnomeSort.cpp  HeapSort.cpp  PancakeSort.cpp  QuickSort.cpp  StalinSort.cpp  Visualizer.cpp
src/: main.cpp
templates/: TemplateSort.cpp  TemplateSort.hpp
